# smartmoney-cub-harness

./: .gitignore  AGENTS.md  AGENT_RUNBOOK.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: open_source_check.md  pre_publish_review.md  story_polish_review.md
docs/: agent-integration.md  architecture.md  decision-schema.md  evolution-loop.md  harness-contract.md  philosophy.md  safety.md
examples/reports/: sample_after_close_report.md
examples/sample_run/: decision.json  evaluation.json  outcome_d1.json  run_manifest.json
examples/toy_strategy/: README.md  leader_pullback_demo.py  sample_prices.json
src/smartmoney_cub_harness/: __init__.py  agent_trigger.py  case_bank.py  cli.py  decision.py  evaluator.py  evolution_ledger.py  loop.py  manifest.py  outcome.py  registry.py  run_capture.py  safety.py  schemas.py
tests/: test_agent_trigger.py  test_evaluator.py  test_loop_cli.py  test_manifest.py  test_outcome.py  test_registry.py  test_run_capture.py  test_safety_redaction.py
