[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmoney-cub-harness"
version = "0.1.0"
description = "A read-only trading companion harness for decision logging, outcome review, and rule evolution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smartmoney-cub-harness contributors" }]
keywords = ["trading-journal", "decision-log", "backtesting", "rule-evolution", "read-only"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
smcub = "smartmoney_cub_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
